fix: swagger ajustes
